interface IArbitro
{
    void criarJogo();
}