interface ITecnico
{
    void criarTime();
    void criarTreino();
    void criarJogo();
}